Avoid height jump on hovering by adjusting padding bottom

--- a/app/webpacker/css/admin_v3/components/navigation.scss
+++ b/app/webpacker/css/admin_v3/components/navigation.scss
@@ -89,6 +89,8 @@ nav.menu {
       &:hover {
         color: $color-5 !important;
         border-bottom: 2px solid $color-5;
+        // avoid height jump on hovering by subtracting the border height to the padding ie. 25px - 2px
+        padding-bottom: 23px;
       }
 
       span.text {
